# a2600

./: .gitignore  scratchpad_path.txt  scratchpad_setupui.txt
app/: CMakeLists.txt  README.md
app/cmake/: toolchain-aarch64-debian-multiarch.cmake  toolchain-aarch64-xilinx.cmake
app/src/: main.cpp
app/src/alg/: AlgParaManager.cpp  AlgParaManager.h  KImageProcess.cpp  KImageProcess.h
app/src/app/: Application.cpp  Application.h
app/src/autotest/: KAutoTestScript.cpp  KAutoTestScript.h  KAutoTestThread.cpp  KAutoTestThread.h
app/src/ctrl/: K3ADimming.cpp  K3ADimming.h  KColdLightConfig.cpp  KColdLightConfig.h  KDccuParam.cpp  KDccuParam.h  KMainCtrlThread.cpp  KMainCtrlThread.h  KMcuUart.cpp  KMcuUart.h  KPlControl.cpp  KPlControl.h  KPlRegs.h
app/src/db/: KComboBoxItem.h  KDbFileOperation.cpp  KDbFileOperation.h  KDbSqlite.cpp  KDbSqlite.h  KDbStrHandler.cpp  KDbStrHandler.h  KEntityDoctor.cpp  KEntityDoctor.h  KEntityExam.cpp  KEntityExam.h  KEntityManage.cpp  KEntityManage.h  KEntityPatient.cpp  KEntityPatient.h  KEntityQuickInput.cpp  KEntityQuickInput.h  KEntityService.cpp  KEntityService.h  KExamBussinessHandler.cpp  KExamBussinessHandler.h  KExamData.cpp  KExamData.h  KExamDataFileNameGenerator.cpp  KExamDataFileNameGenerator.h  KExamEntry.h  KExamListConfigHandler.cpp  KExamListConfigHandler.h  KExamListDBTableHandler.cpp  KExamListDBTableHandler.h  KExamListRecordFileUpdate.cpp  KExamListRecordFileUpdate.h  KExamNoGenerate.cpp  KExamNoGenerate.h  KExportRecord.cpp  KExportRecord.h  KFileBackup.cpp  KFileBackup.h  KPatientExamData.cpp  KPatientExamData.h  (+17 more)
app/src/dicom/: KDbStringOperation.cpp  KDbStringOperation.h  KDicomDatasetFormat.cpp  KDicomDatasetFormat.h  KDicomFieldMap.cpp  KDicomFieldMap.h  KDicomInterface.cpp  KDicomInterface.h  KEntityDicom.cpp  KEntityDicom.h  KPatientStringOperation.cpp  KPatientStringOperation.h  KSysDICOMData.cpp  KSysDICOMData.h
app/src/endo/: KCamera.cpp  KCamera.h  KCameraTables.h  KEndoScope.cpp  KEndoScope.h  KEndoScopeTables.h  KSoftEndoParam.cpp  KSoftEndoParam.h
app/src/hal/: Hal.cpp  Hal.h  KMemDevice.cpp  KMemDevice.h  KUsbDevice.cpp  KUsbDevice.h
app/src/kernel/: KConfig.cpp  KConfig.h  KControlINI.cpp  KControlINI.h  KControlProc.cpp  KControlProc.h  KMessage.cpp  KMessage.h  KObject.cpp  KObject.h  KPublishManager.cpp  KPublishManager.h  KSystemLog.cpp  KSystemLog.h  KThreadPoolMsg.cpp  KThreadPoolMsg.h  yxyDES2.cpp  yxyDES2.h
app/src/monitor/: X2000Monitor.cpp  X2000Monitor.h
app/src/report/: KDocumentGenerator.cpp  KDocumentGenerator.h  KEntityReport.cpp  KEntityReport.h  KImageBlock.cpp  KImageBlock.h  KMeaStringUtil.cpp  KMeaStringUtil.h  KMeaXMLBase.cpp  KMeaXMLBase.h  KRTAbsDataSource.cpp  KRTAbsDataSource.h  KRTAbsItemCreator.h  KRTCreatorContext.cpp  KRTCreatorContext.h  KRTDataSourceDemo.cpp  KRTDataSourceDemo.h  KRTDataSourceReal.cpp  KRTDataSourceReal.h  KRTDataSourceStub.cpp  KRTDataSourceStub.h  KRTSimpleAbsItemCreator.h  KRTSimpleCreatorContext.cpp  KRTSimpleCreatorContext.h  KRTSimpleDisplay.cpp  KRTSimpleDisplay.h  KRTSimpleItemCreators.cpp  KRTTeAbsItemCreator.cpp  KRTTeAbsItemCreator.h  KRTTeCreatorContext.cpp  KRTTeCreatorContext.h  KRTTeDisplay.cpp  KRTTeDisplay.h  KRTTeItemCreators.cpp  KReportDataSource.cpp  KReportDataSource.h  KReportDisplayParam.cpp  KReportDisplayParam.h  KReportEditDataSource.cpp  KReportEditDataSource.h  (+33 more)
app/src/sys/: KAccount.cpp  KAccount.h  KEncSettings.cpp  KEncSettings.h  KEncStyle.cpp  KEncStyle.h  KEndoInfoServerConfig.cpp  KEndoInfoServerConfig.h  KEnvConfig.cpp  KEnvConfig.h  KFactoryOptions.cpp  KFactoryOptions.h  KKey2Name.cpp  KKey2Name.h  KKeyNameTables.h  KLoadUnicodeText.cpp  KLoadUnicodeText.h  KManuPwdMng.cpp  KManuPwdMng.h  KPatientTimeOperation.cpp  KPatientTimeOperation.h  KProjectSet.cpp  KProjectSet.h  KRemoteSwitchConfig.cpp  KRemoteSwitchConfig.h  KSessionInfo.cpp  KSessionInfo.h  KSmallLangTables.h  KSmallLangTranslate.cpp  KSmallLangTranslate.h  KSmallLangTypes.h  KStatisticConfig.cpp  KStatisticConfig.h  KStyleConfig.cpp  KStyleConfig.h  KSysPrintData.cpp  KSysPrintData.h  KSystem.cpp  KSystem.h  KSystemSet.cpp  (+21 more)
app/src/ui/: InputMethod.cpp  InputMethod.h  KAddPrinterDlg.cpp  KAddPrinterDlg.h  KAddPrinterDriverDlg.cpp  KAddPrinterDriverDlg.h  KAlgParamAjustDlg.cpp  KAlgParamAjustDlg.h  KAuthMachineDlg.cpp  KAuthMachineDlg.h  KBackGround.cpp  KBackGround.h  KButtonDefinitionMenu.cpp  KButtonDefinitionMenu.h  KCalendarWidget.cpp  KCalendarWidget.h  KCameraInfoEdit.cpp  KCameraInfoEdit.h  KCheckBoxHeaderView.cpp  KCheckBoxHeaderView.h  KColdlightAdjust.cpp  KColdlightAdjust.h  KContrastSetting.cpp  KContrastSetting.h  KControlInfo.cpp  KControlInfo.h  KCounterTextEdit.cpp  KCounterTextEdit.h  KCustomEdit.cpp  KCustomEdit.h  KDICOMServiceEditDlg.cpp  KDICOMServiceEditDlg.h  KDICOMSrvListTable.cpp  KDICOMSrvListTable.h  KDateEdit.cpp  KDateEdit.h  KDeviceInfo.cpp  KDeviceInfo.h  KDialog.cpp  KDialog.h  (+310 more)
app/src/video/: KMessageManager.cpp  KMessageManager.h  KSaveVideoFile.cpp  KSaveVideoFile.h  KVideoCal.cpp  KVideoCal.h  KVideoParam.cpp  KVideoParam.h  KVideoPlayerMng.cpp  KVideoPlayerMng.h  KVideoProxy.cpp  KVideoProxy.h  KVideoSet.cpp  KVideoSet.h  KViewSoftEndo.cpp  KViewSoftEndo.h
docs/: ARCHITECTURE.md  COVERAGE.md  HMI_PANEL.md  PROGRESS.md  ROADMAP.md
scratch_rev/: allconnect.txt  ctor.txt  retrans.txt  setup.dis  setupui.txt
tools/: coverage.py  device-manifest.sh  gen_camera.py  gen_endoscope.py  gen_kbdlayout.py  gen_keysym.py  gen_lcdproxy.py  rev.sh  revcalls.sh  revstr.py  selftest.sh
